--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -20,9 +20,9 @@ h3{
     background-color: rgb(255, 255, 255, 0.5);
     border: 2px solid white;
     border-radius: 50px 50px 10px 10px;
-    padding: 22px 25px 20px 25px;
+    padding: 22px 20px 20px 20px;
     margin-bottom: 1em;
-    margin-left: 2em;
+    margin-left: 1em;
     margin-right: 2em;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
@@ -33,10 +33,10 @@ h3{
     background-color: rgb(0, 0, 0, 0.3);
     border: 2px solid white;
     border-radius: 10px 10px 10px 10px;
-    padding: 10px 25px 8px 25px;
+    padding: 10px 20px 8px 20px;
     margin-bottom: 0.5em;
     margin-left: 2em;
-    margin-right: 2em;
+    margin-right: 1em;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
     color: #6C585A;
@@ -67,3 +67,8 @@ button:active {
     transform: translateY(3px);
   }
 
+#checkout{
+    background-color: rgb(253, 227, 230);
+    border: 2px solid white;
+    border-radius: 20px;
+}
