--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
     {{!-- bring in fontawesome --}}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     {{!-- public style sheet --}}
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/burger_style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/burger_style.css">
     {{!-- bring in jQuery --}}
     <script src="https://code.jquery.com/jquery.js"></script>
 </head>
