--- a/views/allOwner.handlebars
+++ b/views/allOwner.handlebars
@@ -19,7 +19,7 @@ Create a button in index.handlebars that will submit the user input into the dat
                 <div class="newburger-container">
                     <button class="devourBurger" data-id={{this.id}}> <i class="fas fa-utensils"></i> Devour
                         it!</button>
-                    {{this.burger_name}} <i class="fas fa-hamburger pl-1"></i> Owned by: <a href="/api/owner/{{this.SequelizeOwnerId}}">{{this.SequelizeOwner.owner_name}}</a>
+                    {{this.burger_name}} | Owned by: <a href="/api/owner/{{this.SequelizeOwnerId}}">{{this.SequelizeOwner.owner_name}} <i class="fas fa-link"></i></a>
                 </div>
                 {{/unless}}
                 {{/each}}
