--- a/views/specificOwner.handlebars
+++ b/views/specificOwner.handlebars
@@ -15,7 +15,7 @@
                 <div class="newburger-container">
                     <button class="devourBurger" data-id={{this.id}}> <i class="fas fa-utensils"></i> Devour
                         it!</button>
-                    {{this.burger_name}} <i class="fas fa-hamburger pl-1"></i>
+                    {{this.burger_name}} 
                 </div>
                 {{/unless}}
                 {{/each}}
